Collect correct GL strings when falling back to SwiftShader.

Plus some minor fixes.
1) consistently use gpu_preferences_ instead of gpu_preferences in case in the
   future we want to update gpu_preferences_ in the beginning.
2) change ShouldEnableSwiftShader() to EnableSwiftShaderIfNeeded().

I don't think this is the root cause why SwiftShader fails to fall back as
reported in the bug, but still, it's good to fix this issue.

BUG=852537
TEST=about:gpu
R=piman@chromium.org
TBR=rsesek@chromium.org

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I17ab4d26b4eea079bcd9f732e6689c76f002d584
Reviewed-on: https://chromium-review.googlesource.com/1100123
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Alexis Hétu <sugoi@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567324}
Former-commit-id: dd957d674d79ca4fc2f869cf6afd11f57f1837e1