gpu/config/gpu_util.h
@@ -67,10 +67,11 @@ GPU_EXPORT bool InitializeGLThreadSafe(base::CommandLine* command_line,
 
 // Returns whether SwiftShader should be enabled. If true, the proper command
 // line switch to enable SwiftShader will be appended to 'command_line'.
-GPU_EXPORT bool ShouldEnableSwiftShader(base::CommandLine* command_line,
-                                        const GpuFeatureInfo& gpu_feature_info,
-                                        bool disable_software_rasterizer,
-                                        bool blacklist_needs_more_info);
+GPU_EXPORT bool EnableSwiftShaderIfNeeded(
+    base::CommandLine* command_line,
+    const GpuFeatureInfo& gpu_feature_info,
+    bool disable_software_rasterizer,
+    bool blacklist_needs_more_info);
 
 }  // namespace gpu
 
